@@ -2,12 +2,13 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.28 [20090607] [svn: r267]
+Changelog for sg3_utils-1.28 [20090607] [svn: r268]
   - sg_logs: add cache memory statistics log (sub)page
   - sg_vpd, sg_inq: extend Block limits VPD page (sbc3r19)
   - sg_opcodes: allow --opcode= option to take OP and SA
     values (comma seperated)
-    - tweak format, remove test code
+    - tweak print format, remove test code
+  - sg_requests: remove test code in progress calculation
   - sg_lib: sg_set_binary_mode() needs config.h included
     - change SG3_UTILS_* constants to SG_LIB_*
     - decode service actions within persistent reserve in/out
